Fix quote alignment

--- a/css/main.css
+++ b/css/main.css
@@ -76,7 +76,7 @@ data {
 
 blockquote {
   font-size: 1.5rem;
-  text-align: center;
+  text-align: justify;
   font-style: italic;
 }
 
